[gd_scene load_steps=4 format=3 uid="uid://bsnfdgjf5v0gm"]

[ext_resource type="Script" path="res://scripts_f/pause_menu.gd" id="1_1oktv"]
[ext_resource type="PackedScene" uid="uid://bqfxc1cbuqc3x" path="res://scenes_f/settings.tscn" id="2_4hrys"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xs1bi"]
bg_color = Color(0.418659, 0.522256, 0.9565, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="pause_menu" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_1oktv")

[node name="pause_menu" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="pause_menu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.469735, 0.523653, 0.900028, 0.462745)

[node name="PanelContainer" type="PanelContainer" parent="pause_menu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -224.0
offset_top = -236.0
offset_right = 224.0
offset_bottom = 236.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_xs1bi")

[node name="VBoxContainer" type="VBoxContainer" parent="pause_menu/PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 40
alignment = 1

[node name="Resume" type="Button" parent="pause_menu/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Resume"

[node name="Restart" type="Button" parent="pause_menu/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Restart"

[node name="Quit" type="Button" parent="pause_menu/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Quit"

[node name="Settings" type="Button" parent="pause_menu/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Settings"

[node name="Settings" parent="." instance=ExtResource("2_4hrys")]
visible = false

[node name="Back" type="Button" parent="Settings"]
layout_mode = 0
offset_left = 104.0
offset_top = 64.0
offset_right = 280.0
offset_bottom = 104.0
text = "BACK"

[connection signal="pressed" from="pause_menu/PanelContainer/VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="pause_menu/PanelContainer/VBoxContainer/Restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="pause_menu/PanelContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="pause_menu/PanelContainer/VBoxContainer/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="Settings/Back" to="." method="_on_back_pressed"]
